--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       
       <section class="page_section section2" id="section2">
         <h1>Section two</h1>
-    
+    <!-- sahduh -->
         Кто мы
 
 Мы - команда новаторов, решающие проблему потребительского отношения к современным технологиям состороны детей.
